@@ -122,5 +122,6 @@ Michael Hearne
 Jesper Larsen
 Ryan May
 David Huard
+Mauro Cavalcanti
 
 for valuable contributions.
